<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tlproject.omada1.tl_project.Activitys.ProfileActivity">

    <TextView
        android:text="@string/curexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/curexp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expbar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_above="@+id/curexp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/nextlvlexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/nextlvlexp" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btback"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="back" />

    <TextView
        android:text="@string/usernamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_above="@+id/textView10"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

    <TextView
        android:text="@string/lvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvl"
        android:layout_below="@+id/username"
        android:layout_toLeftOf="@+id/nextlvlexp"
        android:layout_toStartOf="@+id/nextlvlexp"
        android:layout_marginRight="77dp"
        android:layout_marginEnd="77dp" />

    <TextView
        android:text="@string/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/textView9"
        android:layout_toLeftOf="@+id/lvl"
        android:layout_toStartOf="@+id/lvl"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp" />

    <TextView
        android:text="@string/usernamet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/lvl"
        android:layout_alignStart="@+id/lvl" />

    <TextView
        android:text="@string/userprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:text="@string/current_quest"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:text="@string/questdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questdesc"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
